src/core/snapshots/daily_ruster_man__core__app_config__testing__should_resolve_placeholders_with_daily.snap
---
source: src/core/app_config.rs
expression: actual_as_vec
---
[
    (
        "command",
        Commmand(
            CommandToExecute {
                provided_command: "echo hello",
                output_of_executed: None,
                command_processor: OsCommandProcossor,
            },
        ),
    ),
    (
        "day",
        DirectValue(
            "15",
        ),
    ),
    (
        "hello",
        DirectValue(
            "world",
        ),
    ),
    (
        "month",
        DirectValue(
            "5",
        ),
    ),
    (
        "no_command",
        DirectValue(
            "pls_no_execute",
        ),
    ),
    (
        "year",
        DirectValue(
            "2000",
        ),
    ),
]
