src/core/snapshots/daily_ruster_man__core__app_config__testing__should_resolve_placeholders_with_monthly.snap
---
source: src/core/app_config.rs
expression: actual
---
[
    (
        "month",
        DirectValue(
            "2",
        ),
    ),
    (
        "year",
        DirectValue(
            "1980",
        ),
    ),
]
