src/core/snapshots/daily_ruster_man__core__app_config__testing__should_resolve_placeholders_with_yearly.snap
---
source: src/core/app_config.rs
expression: actual
---
[
    (
        "month",
        DirectValue(
            "MONTH_JOURNAL",
        ),
    ),
    (
        "year",
        DirectValue(
            "412",
        ),
    ),
]
